# golf-one-openflight

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  hardware_help.yml
.github/workflows/: pr-checks.yml  pylint.yml  pytest.yml  ui-build.yml
browser-extension/: background.js  content.js  manifest.json
cad/IARC_case/: README.md
config/: sim.example.json
docs/: CHANGELOG.md  GOLF_ONE_FORK.md  PARTS.md  cloud-sync-design.md  cloud-sync.md  gspro-integration.md  kld7-ball-detection-theory.md  kld7-launch-angle-explained.html  kld7-session-review.md  kld7-timing-drift-debug.md  kld7-troubleshooting.md  kld7-vertical-geometry-selector.md  kld7.md  observability.md  openflight-cloud-uploader-spec.md  raspberry-pi-setup.md  sound-trigger-wiring.md  trackman-test-process.md
docs/simulator/: README.md  gspro.md  opengolfsim.md
scripts/: compare_kld7_filters.py  launch-golf-one-gnome.sh  launch-golf-one.sh  open-kiosk-browser.sh  probe_sim.py  run-appliance-session.sh  show_accepted_swings.py  show_swing_times.py  start-appliance-session-compositor.sh  start-kiosk.sh
scripts/analysis/: analyze_trackman_angles.py  calibrate_kld7_reflector.py  capture_iq.py  capture_kld7_radc.py  compare_trackman.py  diagnose_horizontal_angle.py  diagnose_kld7_raw_adc.py  evaluate_kld7_trackman_calibration.py  experiment_spin_phase.py  experiment_spin_windows.py  kld7_analysis_tooling.md  kld7_geometry_selection_report.py  kld7_live_sync.py  kld7_radc_lib.py  kld7_session_review_lib.py  kld7_timing_shift_visualizer.html  ops_impact_finder.py  plot_comparison.py  plot_spin_debug.py  replay_captures.py  replay_club_speed.py  replay_kld7_trackman.py  replay_spin_candidates.py  review_kld7_session.py  session_shot_report.py
scripts/hardware-test/: probe_kld7_timing.py  test_kld7.py  test_sound_trigger_hardware.py
scripts/setup/: GolfOne.desktop  GolfOneGnomeAutostart.desktop  autotouch.desktop  golf-one-wayland.desktop  install-golf-one-appliance-session.sh  install-golf-one-gnome-session.sh  install-golf-one-plymouth.sh  install-golf-one-session.sh  (+11 more)
session_logs/: OpenFlight-Test.Normalized.csv  comparison_20260506.csv  kld7_radc_20260428_123644.pkl  kld7_radc_20260428_124851.pkl  session_20260501_180406_range.jsonl  session_20260501_182650_range.jsonl  session_20260501_183749_range.jsonl  session_20260506_152406_range.jsonl
tests/: conftest.py  test_boot_branding.py  test_cloud_cli.py  test_cloud_client.py  test_cloud_commands.py  test_cloud_config.py  test_cloud_filtering.py  test_cloud_spool.py  test_cloud_trigger.py  test_compare_trackman.py  test_evaluate_kld7_trackman_calibration.py  test_gspro_client_basic.py  test_gspro_client_lifecycle.py  test_gspro_codec.py  test_gspro_messages.py  test_gspro_state.py  test_hardware_docs.py  test_kiosk_browser.py  test_kld7.py  test_kld7_geometry.py  test_kld7_geometry_selection_report.py  test_kld7_radc_lib.py  test_kld7_session_review.py  test_kld7_trackman_calibration.py  test_kld7_two_ray.py  test_opengolfsim_browser_relay.py  test_opengolfsim_codec.py  test_opengolfsim_web_bridge.py  test_ops243.py  test_probe_kld7_timing.py  test_project_metadata.py  test_replay_kld7_trackman.py  test_rolling_buffer.py  test_serial_latency.py  test_server.py  test_session_logger.py  test_session_logger_gspro.py  test_session_shot_report.py  test_sim_concurrent.py  test_sim_config.py  (+6 more)
ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+120 files in other folders)
